hopefully fix banner on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -126,57 +126,6 @@ section {
     background-color: transparent;
 }
 
-@media(max-width:768px) {
-    .navbar-default {
-        border-color: rgba(255,255,255,.3);
-        background-color: #222;
-    }
-
-    .navbar-default .navbar-header .navbar-brand {
-        color: rgba(255,255,255,.7);
-    }
-
-    .navbar-default .navbar-header .navbar-brand:hover,
-    .navbar-default .navbar-header .navbar-brand:focus {
-        color: #fff;
-    }
-
-    .navbar-default .nav > li > a,
-    .navbar-default .nav > li > a:focus {
-        color: rgba(255,255,255,.7);
-    }
-
-    .navbar-default .nav > li > a:hover,
-    .navbar-default .nav > li > a:focus:hover {
-        color: #fff;
-    }
-
-    .navbar-default.affix {
-        border-color: rgba(34,34,34,.05);
-        background-color: #fff;
-    }
-
-    .navbar-default.affix .navbar-header .navbar-brand {
-        font-size: 14px;
-        color: #2f535e;
-    }
-
-    .navbar-default.affix .navbar-header .navbar-brand:hover,
-    .navbar-default.affix .navbar-header .navbar-brand:focus {
-        color: #2f535e;
-    }
-
-    .navbar-default.affix .nav > li > a,
-    .navbar-default.affix .nav > li > a:focus {
-        color: #222;
-    }
-
-    .navbar-default.affix .nav > li > a:hover,
-    .navbar-default.affix .nav > li > a:focus:hover {
-        color: #2f535e;
-    }
-}
-
 ::-moz-selection {
     text-shadow: none;
     color: #fff;
@@ -226,6 +175,10 @@ section {
 }
 
 @media(max-width:768px) {
+  #title {
+    font-size: 40pt!important;
+  }
+
   #logo {
     width: 25vh;
     left: 50%;
